--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,16 +2,15 @@
   background-color: lightpink;
   font-family: Verdana, "DejaVu Sans", sans-serif;
 }
-.second {
+#second {
   color: blue;
-  font-size: 36;
+  font-size: 36px;
 }
-.third{
-    font-size: 24;
+.third {
+  font-size: 24px;
 }
-.fourth{
-    background-color: lightgreen;
-    font-size: 24px;
-    font-weight: bold;
+#fourth {
+  background-color: lightgreen;
+  font-size: 24px;
+  font-weight: bold;
 }
-
