--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,34 +1,27 @@
-.para,
-.small-para {
-  color: hsl(0, 100%, 50%);
-}
-
-.small-para {
-  font-size: 14px;
-}
-
-.para {
-  font-size: 22px;
-}
-
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
-} 
-
 .button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
-
-.child {
-  color: red;
-  font-size: 14px;
+.confirm {
+  background: green;
+  color: white;
+  font-weight: bold;
 }
 
 div.text {
   color: green;
   font-size: 22px;
+}
+.para {
+  font-size: 22px;
+}
+.small-para,
+div.child {
+  font-size: 14px;
+}
+.para,
+.small-para,
+div.child {
+  color: hsl(0, 100%, 50%);
 }
